#9 prepare authentication endpoints
