# backend/api-gateway-go/routes/security-routes.go
@@ -8,6 +8,7 @@ import (
 
 func MapSecurityRoutes(e *echo.Echo, h handlers.ISecurityHandlers, jwtMiddleware echo.MiddlewareFunc) {
 	// Login route
-	e.POST("/authenticate", h.Login())
-	e.GET("/authenticate", h.GetAuthUser(), jwtMiddleware)
+	e.POST("/v1/authenticate", h.AuthenticateByUsernameAndPassword())
+	e.POST("/v1/reauthenticate", h.ReauthenticateUser(), jwtMiddleware)
+	e.GET("/v1/authenticated-user", h.GetUserByJWT(), jwtMiddleware)
 }
